Add styling for flash messages.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10379,3 +10379,10 @@ pre {
   margin-bottom: 15px;
 }
 
+.alert-flash {
+  position: absolute;
+  z-index: 1;
+  bottom: 30px;
+  left: -10px;
+}
+
