--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,3 +4,10 @@
     margin-top: 30px;
     margin-bottom: 15px;
 }
+
+.alert-flash {
+    position: absolute;
+    z-index: 1;
+    bottom: 30px;
+    left: -10px;
+}
